# slamkit

./: .gitignore  CMakeLists.txt  README.md
ar_slam/markers_detection_tracking/: CMakeLists.txt  apriltag_detection.py  apriltag_opencv_demo.cc  aruco_detection.cpp
docs/: Makefile  conf.old.py  conf.py  index.rst  make.bat  requirements.txt
docs/slam_basis/: index.rst  kinematics_dynamics.md  slam_overview.md
docs/slam_basis/sensors/: index.rst  sensor_calib.md  sensor_type.md
docs/slam_benchmark/: index.rst  slam_benchmark.md  slam_dataset.md  slam_simulation.md
docs/slam_framworks/: index.rst  maplab.md  rtabmap.md  slam_framworks.md
docs/slam_gnss_ins/: geomagnetics.md  gis.md  gnss.md  index.rst
docs/slam_gnss_ins/ins/: index.rst  sins_ahrs.md
docs/slam_loopclosure/: index.rst  visual_vocabulary.md
docs/slam_mapping/: index.rst  slam_mapping.md
docs/slam_modules/: index.rst  slam_modules.md
docs/slam_msf/: index.rst  slam_msf.md
docs/slam_odometry/: index.rst  visual_odometry.md
docs/slam_qa/: index.rst  slam_run_tips.md
docs/slam_sensors/: index.rst  slam_sensors.md
kinematics_dynamics/eigen_sophus_demos/: CMakeLists.txt  README.md  eigen_quaternion_slerp.cpp  eigen_rotation.cpp  eigen_sophus.cpp
kinematics_dynamics/eigen_transform/: CMakeLists.txt  eigen_rotation.cpp  eigen_sophus.cpp
kinematics_dynamics/ros_tf/: CMakeLists.txt
kinematics_dynamics/ros_tf/rviz/: show_path.rviz
kinematics_dynamics/ros_tf/src/: show_path.cpp
map/: CMakeLists.txt  README.md  mapping_mono_dense.cpp
mapping/: .gitignore  CMakeLists.txt  README.md  mapping_mono_dense.cpp  mapping_rgbd.cpp  test_octomap.launch  test_octomap.rviz  tum_data_rgbd.h
marker_tracking/: CMakeLists.txt  aruco_detection.cpp
marker_tracking/apriltag/: CMakeLists.txt  apriltag_detection_cam.py  apriltag_opencv_demo.cc
marker_tracking/apriltag/py/: apriltag_detection.py  apriltag_detection_cam.py
marker_tracking/aruco/: CMakeLists.txt  aruco_detect_img.cpp  aruco_detect_live.cpp  aruco_detection.h
pose_estimation/: CMakeLists.txt  README.md  direct_method.cpp  direct_semidense.cpp  direct_sparse.cpp  e2rt.cpp  epipolar_geometry.h  icp.cpp  optical_flow.cpp  optical_flow.h  optical_flow_lk.cpp  optical_flow_test.cpp  pose_estimation.cpp  pose_estimation.h  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  pose_estimation_3d3d_01.cpp  triangulation.cpp
robot_calibration/: README.md
rtabmap/: README.md  study_note.md
rtabmap/launch_test/: demo_mynteye_mapping.launch  rtabmap_astra.launch
scripts/: .gitignore  brownian_motion.py  ekf_slam.py  gauss.py  gauss01.m  gauss02.py  monte_carlo.py
scripts/bspline/: bspline_imu.cc
scripts/data/: imu0.csv
scripts/draw/: draw_data.py  draw_depth.py  draw_imu.py  draw_state_babg.py  draw_state_delta.py  draw_state_td.py  draw_time_process.py
scripts/gmm/: generalizing_E–M.py  motivating_gmm.py
scripts/gnss/: chervon_rtk_to_enu.py  test_geographiclib.py
slam_basis/slam_basis_tex/: .gitignore  Odometry.tex  bibfile.bib  computer_vision.tex  image_process.tex  math_basis.tex  overview.tex  preamble.tex  robotic_kinematics.tex  sensors.tex  slam_basis_cg.tex
slam_dataset/: README.md  slam_benchmark.md
slam_dataset/tum/: README.md  draw_groundtruth.py  tum_data_rgbd.h
slam_discussion/: README.md  SLAM_QA.md  SLAM_QA_00_basics.md  SLAM_QA_01_frontend.md  SLAM_QA_02_backend.md  slam_run_tips.md
slam_discussion/MYNTAI-QA-SLAM/: MYNTAI-QA-01.md  MYNTAI-QA-02.md  MYNTAI-QA-03.md  MYNTAI-QA-04.md
slam_discussion/MYNTAI-QA-SLAM/myntai_qa_01/: myntai_qa_01.tex  preamble.tex
slam_discussion/MYNTAI-QA-SLAM/myntai_qa_02/: myntai_qa_02.tex  preamble.tex
slam_faq/: MYNTAI-QA.md  README.md  slam_faq.md  slam_faq_company.md  slam_faq_gx.md
slam_framworks/: README.md
slam_framworks/laser_slam/: README.md
slam_framworks/maplab/: README.md
slam_framworks/msckf/: README.md
slam_framworks/rtabmap/: DemoRobotMapping.md
slam_framworks/rtabmap-launch/: stereo_test.launch  test.rviz
slam_framworks/rtabmap/launch_test/: obstacle_test.launch  rtabmap_test.launch
visual_odometry/: .gitignore  CMakeLists.txt  README.md  direct_method.cpp  e2rt.cpp  epipolar_geometry.cpp  pose_estimation.cpp  pose_estimation.h  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d_01.cpp  pose_estimation_3d3d_02.cpp  trajectory.h
visual_odometry/ba_gauss_newton/: CMakeLists.txt  ba_gauss_newton.cpp  ba_gn_ceres.cpp  ba_gn_ceres_q.cpp  ba_gn_g2o.cpp
visual_odometry/bundle_adjustment/: CMakeLists.txt
visual_odometry/mono_vo/: CMakeLists.txt  README.md  main.cpp  mono_vo_01.cpp
visual_odometry/mono_vo/mono_vo_python/: test.py
visual_odometry/mono_vo/src/: pinhole_camera.cpp  visual_odometry.cpp
visual_odometry/visual_tracking/: CMakeLists.txt  optical_flow_lk.cpp  optical_flow_test.cpp
visual_vocabulary/: README.md
visual_vocabulary/dbow_demos/: CMakeLists.txt  README.md  create_voc.cpp  create_vocab_01.cpp  create_vocab_02.cpp  loop_closure.cpp  util.hpp
